[package]
name = "rkyv_rpc"
version = "0.0.0-alpha.0"
edition = "2021"
description = "Helpers for defining an RPC protocol using rkyv"
authors = ["Nova <novacrazy@gmail.com>"]
license = "MIT OR Apache-2.0"
include = ["src/**/*", "LICENSE-*", "README.md"]
repository = "https://github.com/Lantern-chat/rkyv_rpc"
documentation = "https://docs.rs/rkyv_rpc"
keywords = ["rkyv", "rpc", "no-std"]
categories = ["no-std", "encoding"]

[features]
default = ["codec"]
codec = ["tokio-util/codec"]

[dependencies]
paste = "1.0.15"
tokio-util = { version = "0.7.11", default-features = false, features = ["codec"] }

[dependencies.rkyv]
version = "0.8.0-alpha.3"
default-features = false
features = ["bytecheck", "alloc"]

[dev-dependencies]
rkyv = "0.8.0-alpha.3" # for the default features
