[package]
name = "rkyv_rpc"
version = "0.0.1-beta.1"
edition = "2021"
description = "Helpers for defining an RPC protocol using rkyv"
authors = ["Nova <novacrazy@gmail.com>"]
license = "MIT OR Apache-2.0"
include = ["src/**/*", "LICENSE-*", "README.md"]
repository = "https://github.com/Lantern-chat/rkyv_rpc"
documentation = "https://docs.rs/rkyv_rpc"
keywords = ["rkyv", "rpc", "no-std"]
categories = ["no-std", "encoding"]

[features]
default = ["codec", "bitflags"]
unaligned = ["rkyv/unaligned"]
codec = ["tokio-util/codec", "dep:thiserror", "rkyv/std"]
bitflags = ["dep:bitflags"]

[dependencies]
paste = "1.0.15"
thiserror = { version = "1.0.63", optional = true }
tokio-util = { version = "0.7.11", default-features = false, features = ["codec"] }
bitflags = { version = "2.6.0", optional = true }

[dependencies.rkyv]
version = "0.8.0-alpha.3"
default-features = false
features = ["bytecheck", "alloc"]

[dev-dependencies.rkyv]
version = "0.8.0-alpha.3"
default-features = true

[dev-dependencies]
futures-util = { version = "0.3.30", features = ["sink"] }
tokio = { version = "1", features = ["full"] }

[patch.crates-io]
rkyv = { git = "https://github.com/Lantern-chat/rkyv" }
